--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -34,6 +34,10 @@ header h2 {
 }
 
 body .thumbnail-height:hover {
-    transition: all 200ms ease-out;
+    transition: all 100ms ease-out;
     transform: scale(1.01);
+}
+
+footer {
+    color: darkslategrey;
 }
