--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4,6 +4,7 @@ body {
 
 .nav-top {
     justify-content: space-between;
+    padding-top: 30px;
 }
 
 nav a {
@@ -40,4 +41,8 @@ body .thumbnail-height:hover {
 
 footer {
     color: darkslategrey;
+}
+
+.index-top {
+    padding-top: 60px;
 }
