--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,6 +5,11 @@ body {
 .nav-top {
     justify-content: space-between;
     padding-top: 30px;
+ }
+
+.nav-top a {
+    text-decoration: none;
+    color: inherit;
 }
 
 header h1 {
@@ -27,6 +32,7 @@ header {
     padding-top: 50px;
     color: darkslategrey;
     font-weight: normal;
+    padding-bottom: 70px;
 }
 
 header h1 {
@@ -52,17 +58,23 @@ footer {
     color: darkslategrey;
 }
 
-.index-top {
-    padding-top: 70px;
-}
-
 .font-awesome-icon {
     font-size: 4em;
     color: slategrey;
     text-align: center;
-    text-decoration: none;
 }
 
 .font-awesome-icon a {
     color: inherit;
+}
+
+.about-title {
+    color: darkslategray;
+}
+
+.about-text {
+    padding-top: 40px;
+    font-family: 'Open Sans', 'sans-serif';
+    font-size: 1.0em;
+    color: darkslategray;
 }
