--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,13 @@
+@media (max-width: 480px) {
+    #navbarToggler {
+        padding-top: 20px;
+    }
+
+    .project-thumbnail {
+        padding-bottom: 10px;
+    }
+}
+
 body {
     font-family: 'Josefin Sans', sans-serif;
 }
@@ -51,7 +61,7 @@ header h2 {
     font-weight: normal;
 }
 
-.thumbnail-height {
+.project-thumbnail {
     height: auto;
 }
 
