Makes social media open in a new tab

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -108,7 +108,7 @@ footer {
     text-align: justify;
 }
 
-.project-body {
+.project-text {
     font-family: "Open Sans", sans-serif;
     font-size: 0.9em;
     text-align: justify;
