--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -11,6 +11,10 @@
     .project-heading {
         padding-top: 20px;
     }
+
+    .about-text {
+        padding-top: 40px;
+    }
 }
 
 /* tablet specific css */
@@ -101,7 +105,6 @@ footer {
 }
 
 .about-text {
-    padding-top: 40px;
     font-family: 'Open Sans', 'sans-serif';
     font-size: 1.0em;
     color: darkslategray;
@@ -123,3 +126,4 @@ footer {
 footer {
     padding-top: 50px;
 }
+
